--- a/TODO.txt
+++ b/TODO.txt
@@ -34,6 +34,10 @@ Cercare altri temi per jekyll e capire come impostarli
 
 Change LinkedIn link
 
+Add little "cv" icon before "Curriculum Vitae" in About
+
 Fix search
 
 Add DDML to projects in about
+
+Add multi-language support with this https://juan.pallares.me/configure-jekyll-multi-language-without-plugin/
