--- a/404.md
+++ b/404.md
@@ -1,6 +1,7 @@
 ---
 layout: page
 permalink: /404.html
+summary: "Page not found"
 ---
 <h2> Sorry, the page you are looking for does not exist! </h2>
 
