Removed "share on" buttons and comments under posts

--- a/TODO.txt
+++ b/TODO.txt
@@ -27,3 +27,5 @@ Fix search
 Add DDML to projects in about
 
 Add multi-language support with this https://juan.pallares.me/configure-jekyll-multi-language-without-plugin/
+
+Add more categories to single post
