--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,5 @@
 Capire come creare il container docker con il sito (per vederlo in locale) e preparare uno script (o un makefile) con le istruzioni
 
-Capire come aprire la dashboard admin
-
 Rimuovere gli altri autori in _authors/ (creando un template in cui si spiega cosa fare per crearne o modificarne uno)
 
 Change "Star" and "Fork" on Home
@@ -9,8 +7,8 @@ Change "Star" and "Fork" on Home
 Aggiungere file aggiuntivi (attestati vari) del CV almeno nella cartella del progetto
 
 Rimuovere immagini inutili da assets/img/
-
-Rimuovere screenshot
+Rimuovere immagini inutili da assets/img/posts
+Rimuovere immagini inutili da assets/img/gallery
 
 Modificare il README mettendo le procedure per modificare il sito (o mettere i puntatori ai file in cui si spiega)
 
@@ -31,3 +29,5 @@ Add multi-language support with this https://juan.pallares.me/configure-jekyll-m
 Add more categories to single post
 
 Stick the "powered by ..." message to the bottom
+
+Add image to posts in Home
