basic setup of new post

--- a/_posts/2022-04-04-trie.md
+++ b/_posts/2022-04-04-trie.md
@@ -12,4 +12,17 @@ usemathjax: true
 published: false # remove to publish
 ---
 
-TODO
+## The name
+Maybe better known as "Prefix Tree", the Trie takes its name from its main operation: the re**TRIE**val.
+
+## The story
+when it was invented
+
+## The structure
+how it can be implemented
+
+## The behavior
+how it performs each operation
+
+## The speed
+benchmarking it against a BST and a hash table
