--- a/_posts/2022-04-04-trie.md
+++ b/_posts/2022-04-04-trie.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "The unfortunate destiny of the Trie"
-summary: "The most unknown data structure"
+title:  "The Trie data structure"
+summary: "As efficient as unknown"
 author: ledmington
 date: '2022-04-04 12:35:00 +0000'
 category: blog
