Removed unused typewrite

--- a/_posts/2022-04-04-trie.md
+++ b/_posts/2022-04-04-trie.md
@@ -64,6 +64,7 @@ void insert(TrieNode *root, char* str) {
         const int index = str[i] - 'a';
         if (tmp->sons[index] == NULL) {
             tmp->sons[index] = init();
+            tmp->sons[index]->father = tmp;
         }
         tmp = tmp->sons[index];
     }
@@ -110,46 +111,46 @@ void delete(TrieNode *root, char* str) {
 
 ## The performance
 <table>
-<thead>
-  <tr>
-    <th></th>
-    <th></th>
-    <th>Trie</th>
-    <th>BST</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td rowspan="3">Sorted</td>
-    <td>Build</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>Search</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>Delete</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td rowspan="3">Shuffled</td>
-    <td>Build</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>Search</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>Delete</td>
-    <td></td>
-    <td></td>
-  </tr>
-</tbody>
+  <thead>
+    <tr>
+      <th></th>
+      <th></th>
+      <th>Trie</th>
+      <th>BST</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td rowspan="3">Sorted</td>
+      <td>Build</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>Search</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>Delete</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td rowspan="3">Shuffled</td>
+      <td>Build</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>Search</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>Delete</td>
+      <td></td>
+      <td></td>
+    </tr>
+  </tbody>
 </table>
