--- a/_posts/2022-04-04-trie.md
+++ b/_posts/2022-04-04-trie.md
@@ -9,23 +9,22 @@ thumbnail: /assets/img/trie.png
 keywords: blog, data-structure
 permalink: /blog/trie/
 usemathjax: true
-published: false # remove to publish
 ---
 
 The thumbnail was generated with [this site](https://www.cs.usfca.edu/~galles/visualization/Trie.html). Go check it out!
 
 ## The name
 The Trie takes its name from its main operation, the re**TRIE**val, which is more a bad pun than an actual operation. It's also known as "**Prefix Tree**" because of the way it is structured.
-A Trie is a tree built to store a large strings as well as integer numbers. Actually, it can store any sequence of symbols, given that the alphabet of those symbols is **finite** and **known**.
+A Trie is a tree built to store a large amount of strings as well as integer numbers. Actually, it can store any sequence of symbols, given that the alphabet of those symbols is **finite** and **known**.
 More specifically, a trie is *d*-ary tree, where *d* is the size of the alphabet of the symbols used.
 
 Each node of a Trie can contain at most *d* sons, one for each symbol. Each node represents a certain symbol, except for the root of the tree which represents nothing, or the beginning of the string.
 
 ## The structure
 We need three fields for each node of the Trie:
-- a pointer to the father node
-- a fixed length array of sons (in this case, exactly 26)
-- a boolean to tell us if a given node represents the end of a word
+- a pointer to the **father** node
+- a fixed length array of **sons** (in this case, exactly 26)
+- a boolean to tell us if a given node represents the **end of a word**
 
 Notice that we don't need a variable to hold the symbol, because we can extract it from the index of the node in its father's array.
 
@@ -38,7 +37,7 @@ typedef struct _trie {
 ```
 
 ## The behavior
-In the following functions, i purposely omit NULL checks on the input and the return of `malloc` to make the code shorter and more readable.
+In the following functions, i intentionally omit NULL checks on the input and the return of `malloc` to make the code shorter and more readable.
 
 #### `init`
 This functions creates a new empty node with no sons.
@@ -49,6 +48,8 @@ TrieNode* init() {
     for (int i=0; i<26; i++) {
         node->sons[i] = NULL;
     }
+    node->father = NULL;
+    node->end_of_word = false;
     return node;
 }
 ```
@@ -94,63 +95,15 @@ The deletion of a string from the Trie is actually setting the boolean `end_fo_w
 has no sons, it is deallocated and this procedure continues on all father nodes until one with more than 1 son (or the root) is found.
 
 ```c
-void delete(TrieNode *root, char* str) {
-    TrieNode *tmp = root;
-    const int len = strlen(str);
-    int i = 0;
-    while (tmp != NULL && i < len) {
-        tmp = tmp->sons[str[i] - 'a'];
-        i++;
+void trie_delete (TrieNode *root) {
+    if (root == NULL) return;
+    for(int i=0; i<26; i++) {
+        if( root->sons[i] != NULL ) trie_delete(root->sons[i]);
     }
-
-    if (tmp == NULL) return;
-
-    tmp->end_of_word = false;
+    free(root);
 }
 ```
 
-## The performance
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th></th>
-      <th>Trie</th>
-      <th>BST</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td rowspan="3">Sorted</td>
-      <td>Build</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>Search</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>Delete</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td rowspan="3">Shuffled</td>
-      <td>Build</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>Search</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>Delete</td>
-      <td></td>
-      <td></td>
-    </tr>
-  </tbody>
-</table>
+
+**NOTE:**
+A personal implementation of the Trie can be found on [my GitHub](https://github.com/Ledmington/personal/tree/main/trie).
