--- a/_posts/2022-04-04-trie.md
+++ b/_posts/2022-04-04-trie.md
@@ -6,7 +6,7 @@ author: ledmington
 date: '2022-04-04 12:35:00 +0000'
 category: blog
 thumbnail: /assets/img/trie.png
-keywords: blog, data-structure
+keywords: data-structure
 permalink: /blog/trie/
 usemathjax: true
 ---
