--- a/_posts/2022-04-04-trie.md
+++ b/_posts/2022-04-04-trie.md
@@ -4,7 +4,10 @@ title:  "The Trie data structure"
 summary: "As efficient as unknown"
 author: ledmington
 date: '2022-04-04 12:35:00 +0000'
-category: blog
+category:
+ - trie
+ - data-structure
+ - tree
 thumbnail: /assets/img/trie.png
 keywords: data-structure
 permalink: /blog/trie/
