Fixed other errors in html

--- a/404.md
+++ b/404.md
@@ -5,4 +5,4 @@ summary: "Page not found"
 ---
 <h2> Sorry, the page you are looking for does not exist! </h2>
 
-<button class="btn btn-lg btn-default"><a href="/">Back to Home</a></button>
+<button type="button" class="btn btn-lg btn-default" onclick="window.location.href='/'">Back to Home</button>
