--- a/_posts/2022-04-04-trie.md
+++ b/_posts/2022-04-04-trie.md
@@ -94,7 +94,7 @@ bool search(TrieNode *root, char* str) {
 
 #### `delete`
 This function deletes the given string `str` from the Trie rooted at the given `root`. If `str` was not present, no changes are made to the Trie.
-The deletion of a string from the Trie is actually setting the boolean `end_fo_word` to false. In this implementation, however, if the "deleted" node
+The deletion of a string from the Trie is actually setting the boolean `end_of_word` to false. In this implementation, however, if the "deleted" node
 has no sons, it is deallocated and this procedure continues on all father nodes until one with more than 1 son (or the root) is found.
 
 ```c
