started writing post for week 2

--- a/TODO.txt
+++ b/TODO.txt
@@ -38,4 +38,6 @@ Add nice CSS to blog/categories/*
 Add little glowing effect to classic underlined blue links: maybe color them orange and give a little glow on hover
 Maybe little glow effect also on buttons in top bar
 
-In Skills, maybe add little logos of languages and libraries?
+In Skills, maybe add little logos of languages and libraries (and links, of course)
+
+Use appropriate fonts (the numbers in the posts and post titles are wonky).
